--- a/model.ipynb
+++ b/model.ipynb
@@ -102,6 +102,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -5020,16 +5029,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_extract_data = pd.read_csv('train_extract_data.csv', index_col=0)\n",
-    "test_extract_data = pd.read_csv('test_extract_data.csv', index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
@@ -5186,11 +5185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#remove hashtags\n",
     "\n",
-    "def hashtags(text):\n",
-    "    clean_text = re.findall(r\"#(\\w+)\", text)\n",
-    "    return text\n",
     "\n",
     "#remove @users\n",
     "\n",
@@ -5251,21 +5246,16 @@
     "\n",
     "def remove_(text):\n",
     "    clean_text = re.sub('([_]+)', '', text)\n",
-    "    return clean_text\n",
-    "\n",
-    "def clean_html(text):\n",
-    "  html = re.compile('<.*?>')#regex\n",
-    "  return html.sub(r'',text)"
+    "    return clean_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 563,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_text(df, col):\n",
-    "    df[col] = df[col].apply(func = clean_html)\n",
     "    df[col] = df[col].apply(func = remove_digits)\n",
     "    df[col] = df[col].apply(func = remove_email)\n",
     "    df[col] = df[col].apply(func = remove_links)\n",
@@ -5923,15 +5913,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 472,
    "metadata": {},
    "outputs": [
@@ -6001,6 +5982,15 @@
    "outputs": [],
    "source": [
     "x_test_tfidf = vectorizer.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(vectorizer, 'tfidf_vectorizer.pkl')"
    ]
   },
   {
@@ -6200,7 +6190,7 @@
    "source": [
     "param_grid_nb = {\n",
     "    'alpha': [0.1, 0.5, 1.0, 2.0, 5.0],\n",
-    "    'fit_prior': [True]  # Tune the fit_prior parameter\n",
+    "    'fit_prior': [True]  \n",
     "}"
    ]
   },
@@ -6777,10 +6767,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Create a DataFrame from the confusion matrix\n",
     "cm_df = pd.DataFrame(cm, index=label_encoder.classes_, columns=label_encoder.classes_)\n",
     "\n",
-    "# Plot using seaborn heatmap\n",
     "plt.figure(figsize=(8, 5))\n",
     "sns.heatmap(cm_df, annot=True, fmt='d', cmap='Blues', cbar=False, linewidths=0.5, linecolor='black')\n",
     "\n",
@@ -7446,10 +7434,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Create a DataFrame from the confusion matrix\n",
     "cm_df = pd.DataFrame(cm, index=label_encoder.classes_, columns=label_encoder.classes_)\n",
     "\n",
-    "# Plot using seaborn heatmap\n",
     "plt.figure(figsize=(8, 5))\n",
     "sns.heatmap(cm_df, annot=True, fmt='d', cmap='Blues', cbar=False, linewidths=0.5, linecolor='black')\n",
     "\n",
@@ -7533,14 +7519,14 @@
    "outputs": [],
    "source": [
     "param_grid_xgb = {\n",
-    "    'n_estimators': [50, 75],               # Number of trees\n",
-    "    'max_depth': [None, 3],                       # Maximum depth of trees\n",
-    "    'learning_rate': [0.001, 0.01],            # Learning rate\n",
-    "    'subsample': [0.8, 0.9],                 # Fraction of samples used for fitting each tree\n",
-    "    'colsample_bytree': [0.8, 0.9],          # Fraction of features used for each tree\n",
-    "    'gamma': [0.1, 0.2],                       # Regularization parameter\n",
-    "    'reg_alpha': [0.1, 0.2],                   # L1 regularization term\n",
-    "    'reg_lambda': [1, 2]                     # L2 regularization term\n",
+    "    'n_estimators': [50, 75],              \n",
+    "    'max_depth': [None, 3],                     \n",
+    "    'learning_rate': [0.001, 0.01],          \n",
+    "    'subsample': [0.8, 0.9],                \n",
+    "    'colsample_bytree': [0.8, 0.9],          \n",
+    "    'gamma': [0.1, 0.2],                       \n",
+    "    'reg_alpha': [0.1, 0.2],                  \n",
+    "    'reg_lambda': [1, 2]                    \n",
     "}"
    ]
   },
@@ -8161,10 +8147,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Create a DataFrame from the confusion matrix\n",
     "cm_df = pd.DataFrame(cm, index=label_encoder.classes_, columns=label_encoder.classes_)\n",
     "\n",
-    "# Plot using seaborn heatmap\n",
     "plt.figure(figsize=(8, 5))\n",
     "sns.heatmap(cm_df, annot=True, fmt='d', cmap='Blues', cbar=False, linewidths=0.5, linecolor='black')\n",
     "\n",
@@ -8275,7 +8259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8321,106 +8305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['tfidf_vectorizer.pkl']"
-      ]
-     },
-     "execution_count": 530,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "joblib.dump(vectorizer, 'tfidf_vectorizer.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 562,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred while fetching the PDF from AWL.01\n",
-      "\n",
-      "AWL.01\n",
-      "\n",
-      "4 in\n",
-      "\n",
-      "1.88 in M.C.\n",
-      "\n",
-      "3.75 in\n",
-      "\n",
-      "3.75 in\n",
-      "\n",
-      "AWL.01 ASC\n",
-      "\n",
-      "4.5 in\n",
-      "\n",
-      "4.5 in\n",
-      "\n",
-      "4 in\n",
-      "\n",
-      "SPECIFICATIONS\n",
-      "Material\n",
-      "Machined aluminum with stainless\n",
-      "steel fasteners.\n",
-      "Finish\n",
-      "Micro brushed with clear coat after\n",
-      "fabrication before assembly.\n",
-      "\n",
-      "Optional ASC Canopy\n",
-      "\n",
-      "  Mini Jbox by LumenArt\n",
-      "\n",
-      "Mounting\n",
-      "New Construction: Mini Jbox by\n",
-      "LumenArt.\n",
-      "Remodel: 4” square Jbox with\n",
-      "round plaster ring or octagon box\n",
-      "order optional ASC canopy.\n",
-      "\n",
-      "Electrical\n",
-      "ETL Indoor damp location listed.\n",
-      "LED lamp by LumenArt. Triac\n",
-      "dimming.\n",
-      "\n",
-      "ORDERING LOGIC\n",
-      "\n",
-      "Use matrix below to order complete fixture\n",
-      "\n",
-      "Fixture\n",
-      "AWL.01\n",
-      "\n",
-      "Lamping\n",
-      "4w LED 400lm\n",
-      "\n",
-      "Voltage\n",
-      "120V\n",
-      "\n",
-      "Glass\n",
-      "Frost\n",
-      "Cobalt Blue\n",
-      "Amber\n",
-      "\n",
-      "Options\n",
-      "4.5” ASC\n",
-      "CANOPY\n",
-      "\n",
-      "AWL.01      4w LED       120v\n",
-      "\n",
-      "LumenArt,  Ltd.  3333  W.  47th.  St.,  Chicago,  IL  60632\n",
-      "Phone  773-254-0744  Fax  773-254-0767  www.lumenart.com\n",
-      "\n",
-      "\f: No connection adapters were found for 'AWL.01\\n\\nAWL.01\\n\\n4 in\\n\\n1.88 in M.C.\\n\\n3.75 in\\n\\n3.75 in\\n\\nAWL.01 ASC\\n\\n4.5 in\\n\\n4.5 in\\n\\n4 in\\n\\nSPECIFICATIONS\\nMaterial\\nMachined aluminum with stainless\\nsteel fasteners.\\nFinish\\nMicro brushed with clear coat after\\nfabrication before assembly.\\n\\nOptional ASC Canopy\\n\\n  Mini Jbox by LumenArt\\n\\nMounting\\nNew Construction: Mini Jbox by\\nLumenArt.\\nRemodel: 4” square Jbox with\\nround plaster ring or octagon box\\norder optional ASC canopy.\\n\\nElectrical\\nETL Indoor damp location listed.\\nLED lamp by LumenArt. Triac\\ndimming.\\n\\nORDERING LOGIC\\n\\nUse matrix below to order complete fixture\\n\\nFixture\\nAWL.01\\n\\nLamping\\n4w LED 400lm\\n\\nVoltage\\n120V\\n\\nGlass\\nFrost\\nCobalt Blue\\nAmber\\n\\nOptions\\n4.5” ASC\\nCANOPY\\n\\nAWL.01      4w LED       120v\\n\\nLumenArt,  Ltd.  3333  W.  47th.  St.,  Chicago,  IL  60632\\nPhone  773-254-0744  Fax  773-254-0767  www.lumenart.com\\n\\n\\x0c'\n",
-      "Predicted Class: others\n",
+      "Predicted Class: lighting\n",
       "Predicted Class Probability: 0.25\n",
       "Class: cable, Probability: 0.25\n",
       "Class: fuses, Probability: 0.25\n",
@@ -8431,11 +8323,11 @@
     {
      "data": {
       "text/plain": [
-       "('others',\n",
-       " array([0.24999267, 0.24999271, 0.24999356, 0.25002104], dtype=float32))"
+       "('lighting',\n",
+       " array([0.24873407, 0.24873413, 0.25347194, 0.24905989], dtype=float32))"
       ]
      },
-     "execution_count": 542,
+     "execution_count": 562,
      "metadata": {},
      "output_type": "execute_result"
     }
